Fix alignment of tags

--- a/static/src/scss/style.scss
+++ b/static/src/scss/style.scss
@@ -173,3 +173,8 @@ nav {
 .index-list {
   margin-top: 4em;
 }
+
+#tags > * {
+  display: inline-block;
+  padding: 0 2px;
+}
